[tool.poetry]
name = "ds-showcase"
version = "0.1.0"
description = ""
authors = ["AiPunk <johannes.forster@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
scikit-learn = "^1.0.2"
jupyter = "^1.0.0"
spacy = "^3.2.1"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
